--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mario Sancho - Portfolio</title>
+    <title>Find your Recipe</title>
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <meta
       name="description"
-      content="Mario Sancho - Porfolio - Developer"
+      content="Recipes Search - Api - Cooking"
     />
 
     <meta
       name="keywords"
-      content="Portfolio, Developer, Frontend, Projects, Aboutme"
+      content="Recipes, Search, Api, Edamam, Cooking"
     />
 
     <meta name="author" content="Mario Sancho" />
@@ -92,5 +92,6 @@
   </head>
   <body>
     <div id="app" class='loader'></div>
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
   </body>
 </html>
