do responsive img part 1, pending zooming

--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find your Recipe</title>
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
-    <meta
-      name="description"
-      content="Recipes Search - Api - Cooking"
-    />
+    <meta name="description" content="Recipes Search - Api - Cooking" />
 
-    <meta
-      name="keywords"
-      content="Recipes, Search, Api, Edamam, Cooking"
-    />
+    <meta name="keywords" content="Recipes, Search, Api, Edamam, Cooking" />
 
     <meta name="author" content="Mario Sancho" />
     <style>
-            
       /* spinner */
-            .loader:empty,
+      .loader:empty,
       .loader:empty:before,
       .loader:empty:after {
         border-radius: 50%;
@@ -41,7 +34,7 @@
       .loader:empty:before,
       .loader:empty:after {
         position: absolute;
-        content: '';
+        content: "";
       }
       .loader:empty:before {
         width: 5.2em;
@@ -87,11 +80,10 @@
           transform: rotate(360deg);
         }
       }
-
     </style>
   </head>
   <body>
-    <div id="app" class='loader'></div>
+    <div id="app" class="loader"></div>
     <script src="https://developer.edamam.com/attribution/badge.js"></script>
   </body>
 </html>
