--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         color: #000000;
         font-size: 10px;
         margin: 80px auto;
-        margin-top: 75%;
+        margin-top: 45vh;
         position: relative;
         text-indent: -9999em;
         -webkit-transform: translateZ(0);
